--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -77,13 +77,20 @@
                        
                         <div class="booking-col1">
                         <span>Booking area</span> : <%= booking.area %> sq. ft
+                        
                         <p>
-                           <%if booking.status.present? %>      
-                              <span>Status</span> : <%= booking.status rescue nil%>
-                           <%else%>
+                          
+                           <% if booking.is_cancel == true %>
+                              <span>Status</span> : Cancelled
+                            <% elsif booking.is_confirm == true %>
+                              <span>Status</span> : Confirmed booking
+                            <% else %>
                               <span>Status</span> : Waiting for drop-off confirmation
-                           <%end%>
+                            <% end %>
+                            
                         </p>
+
+                        
                         </div>
                         
                         <div class="booking-col1">
