--- a/app/views/order_receives/cancel_popup.html.erb
+++ b/app/views/order_receives/cancel_popup.html.erb
@@ -107,7 +107,7 @@ font-family: brandon4;
 
 		<% if @booking.is_cancel == true %>
 		    <div class="alredy-btn">
-			  <%= link_to "Already Booking", "javascript:void(0)" %>
+			  <%= link_to "Already cancelled", "javascript:void(0)" %>
 			</div>
 		<% else %>
 		    <div class="booking-btn">
