--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -124,7 +124,8 @@
   <% end %>
 
       <%= hidden_field_tag :stripe_card_token %>
-       <p>Setup a Card to receive payments <span>?</span></p>
+       <div>Setup a Card to receive payments <span title="This is some information for our tooltip." class="month1 tooltip_new "><img src="/assets/que.png">
+           </span></div>
        <%= f.text_field :full_name, :class=>"form-control",:placeholder=>"Full name"  %>
       <%= f.hidden_field :user_id,:value =>current_user.id%>
        <div class="card">
