personal information page

--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -23,11 +23,10 @@
                 
                 <div class="massage"><%= f.text_area :message,:cols => "40", :rows => "40",placeholder: "Message", :style=>"width:290px; height:80px;", :id=>"topic1" %></div>
                 <%= f.submit "Submit", :class => "submit button"%><br>   
-                <% end %>
-               
+                <% end %>          
                 
          
-            <div class="help" style="margin-width: 268px;">help@dinobo.com </div>
+            <div class="help" style="margin-width: 268px;">sagar.kale@kunalinfotech.net </div>
              </div>
 
                </div>              
