--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -107,11 +107,11 @@ $('.masterTooltip').hover(function(){
                                 When can they drop off goods at your place ?<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
                                 <ul class="post-date">
                                   <li><label>From</label>
-                                    <%= f.text_field :drop_off_avaibility_start_date%>
+                                    <%= f.text_field :drop_off_avaibility_start_date,:autocomplete => :off,:readonly => true, :class => "date", :style => "padding: 3px;"%>
                                   </li>
 
                                   <li><label>To</label>
-                                    <%= f.text_field :drop_off_avaibility_end_date%>
+                                    <%= f.text_field :drop_off_avaibility_end_date,:autocomplete => :off,:readonly => true, :class => "date", :style => "padding: 3px;"%>
                                   </li>
                                 </ul>
                               </div> 
@@ -211,8 +211,10 @@ $('.masterTooltip').hover(function(){
                               <div class="post-bg-row-col3">
                                When can they pick up the goods ?<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
                                 <ul class="post-date">
-                                <li><label>From</label><%= f.text_field :pick_up_avaibilty_start_date%></li>
-                                <li><label>To</label><%= f.text_field :pick_up_avaibility_end_date%></li>
+                                <li><label>From</label><%= f.text_field :pick_up_avaibilty_start_date,
+                                :autocomplete => :off,:readonly => true, :class => "date", :style => "padding: 3px;"%></li>
+                                <li><label>To</label><%= f.text_field :pick_up_avaibility_end_date,
+                                :autocomplete => :off,:readonly => true, :class => "date", :style => "padding: 3px;"%></li>
                                 </ul>
                               </div> 
                             </div>
@@ -241,16 +243,19 @@ $('.masterTooltip').hover(function(){
                                 <%= f.submit "Submit",:class=>"submit-btn" %>&nbsp;&nbsp;&nbsp;&nbsp;
                                 
                                 </p>
+
+                                <p style="margin: 39px 0 39px; color: #899199; font-size: 10px; line-height: 11px;">
+                                  <% if @post.id %>
+                                  <% if @post.status == true %>
+                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Deactive Post', toggle_post_path(@post.id), :class=>"post-btn" %>
+                                  <% else %>
+                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Activate Post', toggle_post_path(@post.id), :class=>"post-btn" %>
+                                  <% end %>
+                                  &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(@post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"post-btn" %> 
+                                <% end %>
+                                </p>
                             
                             </div>
-                               <% if @post.id %>
-                                  <% if @post.status == true %>
-                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Deactive Post', toggle_post_path(@post.id), :class=>"booking-btn" %>
-                                  <% else %>
-                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Activate Post', toggle_post_path(@post.id), :class=>"booking-btn" %>
-                                  <% end %>
-                                  &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(@post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"booking-btn" %> 
-                                <% end %>
                             
                         </div>
                  
