--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,11 +29,11 @@
       <div class="blue-header">
         <ul class="date">
           <li>From <span>
-           <%= text_field_tag :start_date, params[:start_date], :readonly => true %></span>
+           <%= text_field_tag :start_date, params[:start_date],:class => "date", :readonly => true %></span>
           </li>
             
           <li>
-            To <span><%= text_field_tag :end_date, params[:end_date], :readonly => true %></span>
+            To <span><%= text_field_tag :end_date, params[:end_date],:class => "date", :readonly => true %></span>
           </li>  
         </ul>
         <div class="status">
