Post overview page updated

--- a/app/views/order_receives/index.html.erb
+++ b/app/views/order_receives/index.html.erb
@@ -72,11 +72,13 @@
               <span>Rate</span> : $<%= booking.post.price_sq_ft%>/sq.ft.
             </p>
             <p>
-              <%if booking.status.present?%>
-                <span>Status</span> :<%= booking.status%>
-              <%else%>
-                <span>Status</span> :Awaiting drop-off confirmation
-              <%end%>
+              <% if booking.is_cancel == true %>
+                  <span>Status</span> : Cancelled
+              <% elsif booking.is_confirm == true %>
+                  <span>Status</span> : Confirmed booking
+              <% else %>
+                  <span>Status</span> : Waiting for drop-off confirmation
+              <% end %>
             </p>
             <p>
               
