Working on registration popup module

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,12 +35,13 @@
 
                  <div class="dropdown">
                      <a class="account"></a>
-                     <% if user_signed_in? %>
+                    
                       <div class="submenu" style="display: none; ">
                         
                           
                             <div class="main-new2">
                                 <ul>
+                                   <% if user_signed_in? %>
                                     <li>
                                         <%= link_to "List your place", posts_overview_path %>
                                     </li>
@@ -66,11 +67,15 @@
                                     </li>
                                    <li><a href="javascript:void(0);">Support</a></li>
                                    <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                                   <% else %>
+                                     <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"} %></li>
+                                     <li><a href="javascript:void(0);">Support</a></li>
+                                  <% end %>
                                 </ul>
                             </div>
 
                       </div>
-                     <% end %>
+                    
                   </div>
             </div>
            
