--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -37,12 +37,13 @@
 
                  <div class="dropdown">
                      <a class="account"></a>
-                     <% if user_signed_in? %>
+                     
                       <div class="submenu" style="display: none; ">
                         
                           
                             <div class="main-new2">
                                 <ul>
+                                  <% if user_signed_in? %>
                                     <li>
                                         <%= link_to "List your place", posts_overview_path %>
                                     </li>
@@ -65,11 +66,15 @@
                                     </li>
                                    <li><a href="javascript:void(0);">Support</a></li>
                                    <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                                   <% else %>
+                                     <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"} %></li>
+                                     <li><a href="javascript:void(0);">Support</a></li>
+                                  <% end %>
                                 </ul>
                             </div>
 
                       </div>
-                     <% end %>
+                     
                   </div>
             </div>
 
@@ -83,9 +88,10 @@
             <div class="right" style="width:191px;float:left;"> <!--------9/12/14---------------->
                 <ul>
                 <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"} %></li>
-                <li><%= link_to "FAQ", frequently_asked_question_path%></li>
+                <li><%= link_to "FAQ", frequently_asked_question_path %></li>
                  
-                <li><%= link_to 'Contact us', home_contactus_path %> </li></ul><br>
+                <li><%= link_to 'Contact us', home_contactus_path %> </li>
+              </ul><br>
             </div>
                
               <div class="left" style="width:200px;float:left;">
